WIP | add printer and button

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,11 @@ LOCATION_ID=1
 # This raspi has these vehicle codes
 VEHICLE_CODE_1=MT1
 VEHICLE_CODE_2=MT2
+
+# For printer
+VENDOR_ID=
+PRODUCT_ID=
+
+# Select raspi pin for buttons
+BUTTON_PIN_1=17
+BUTTON_PIN_2=18
