WIP | add camera capture

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-WEBAPP_ADDRESS="192.168.100.225"
+WEBAPP_ADDRESS="192.168.63.136"
 WEBAPP_PORT="5000"
 WEBAPP_HOOK="create_transaction"
+# Local http server port
 LOCAL_PORT="8000"
 
 # This raspi is connected to this location id
@@ -14,6 +15,12 @@ VEHICLE_CODE_2=MT2
 VENDOR_ID=
 PRODUCT_ID=
 
-# Select raspi pin for buttons
-BUTTON_PIN_1=17
-BUTTON_PIN_2=18
+# Select raspi pin for buttons. If not using pcb, leave it as is
+BUTTON_PIN_1=2
+BUTTON_PIN_2=3
+
+# Camera
+CAMERA_IP=
+CAMERA_USERNAME=
+CAMERA_PASSWORD=
+CAMERA_API="ISAPI/Streaming/channels/1/picture"
